--- a/Activity/to-do list/style.css
+++ b/Activity/to-do list/style.css
@@ -1,152 +1,175 @@
 *{
-    font-size: 20px;
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
 }
+
+body {
+  background: linear-gradient(#71b7e6,#9b59b6);
+  background-attachment: fixed;
+}
+
 header {
-    background-color: #f2f2f2;
-    padding: 20px;
-    text-align: center;
-  }
-
-header h1{
-    font-size: 30px;
-}
-  main {
-    display: flex;
-    padding: 20px;
-    
-  }
-
-  body{
-    background-color: #f2f2f2;
-  }
-
-  input{
-    padding: 10px;
-    cursor: pointer;
-  }
-
-  label{
-    margin: 15px;
-  }
-  
-  select{
-    padding: 10px;
-  }
-
-  .form-container,
-  .table-container {
-    flex: 1;
-    padding: 10px;
-  }
-  
-  .form-container {
-    background-color:  antiquewhite;
-    margin-right: 10px;
-  }
-  
-  .table-container {
-    background-color: antiquewhite;
-  }
-  
-  form {
-    border: 1px solid black;
-    padding: 10px;
-    margin: 10px;
-    display: flex;
-    flex-direction: column;
-  }
-  
-input[value="EDIT"],input[value="CANCEL"]{
-    display: none;
+  padding: 20px;
+  text-align: center;
+  color: white;
 }
 
-input[type="button"]{
-    width: 50%;
+header h1 {
+  font-size: 40px;
 }
 
-input[value="ADD"]{
-    background-color:cornflowerblue;
+main {
+  display: flex;
+  padding: 20px;
 }
 
-input[type="reset"]{
-    width: 49%;
-    background-color: wheat;
+input {
+  padding: 10px;
+  cursor: pointer;
 }
 
-input[value="EDIT"]{
-    width: 49%;
+label {
+  margin: 15px;
 }
 
-
-input[value="CANCEL"]{
-    width: 49%;
+select {
+  padding: 10px;
 }
 
-.buttons{
-    margin:10px;
+.form-container,
+.table-container {
+  flex: 1;
+  padding: 10px;
+  border-radius: 10px;
+  background: #f4f7f8;
+  margin: 20px;
+}
+
+.form-container {
+  margin-right: 10px;
+}
+
+form {
+  padding: 10px;
+  margin-left: 60px;
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+}
+
+input[value="EDIT"],
+input[value="CANCEL"] {
+  display: none;
+  border: none;
+}
+
+input[type="button"] {
+  width: 50%;
+  border: none;
+  border-radius: 4px;
+
+}
+
+input[value="ADD"] {
+  background-color: cornflowerblue;
+  border: none;
+  border-radius: 15px;
+  color: white;
+}
+
+input[type="reset"] {
+  width: 49%;
+  background-color:crimson; 
+  border: none;
+  border-radius: 15px;
+  color: white;
+}
+
+input[value="EDIT"] {
+  width: 49%;
+  border: none;
+  border-radius: 15px;
+}
+
+input[value="CANCEL"] {
+  width: 49%;
+  border: none;
+  border-radius: 15px;
+  background-color: orange;
+}
+
+.buttons {
+  margin: 10px;
 }
 
 table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-  }
-  
-  th, td {
-    padding: 10px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-  }
-  
-  th {
-    background-color: #f2f2f2;
-  }
-  
-  tr:nth-child(even) {
-    background-color: #f9f9f9;
-  }
-  
-  tr:hover {
-    background-color: #f5f5f5;
-  }
-  
-  input[value="Update"],input[value="Delete"] {
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    padding: 10px;
-    text-align: center;
-    text-decoration: none;
-    font-size: 12px;
-    cursor: pointer;
-    border-radius: 3px;
-    margin: 2px;
-    width: 45%;
-  }
-  
-  
-  input[value="Update"]:hover {
-    background-color: #45a049;
-  }
-  
-  #deleteButton {
-    background-color: #f44336;
-  }
-  
-  #deleteButton:hover {
-    background-color: #d32f2f;
-  }
-  
-p{
-    display: none;
-    text-align: center;
-    color: #f44336;
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+th,
+td {
+  padding: 10px;
+  text-align: left;
+  border: 1px solid #ddd;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+tr:hover {
+  background-color: #f5f5f5;
+}
+
+input[value="Update"],
+input[value="Delete"] {
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  padding: 10px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 12px;
+  cursor: pointer;
+  border-radius: 3px;
+  margin: 2px;
+  width: 45%;
+}
+
+input[value="EDIT"]{
+  background-color: #4CAF50;
+}
+
+input[value="Update"]:hover {
+  background-color: #45a049;
+}
+
+input[type="search"] {
+  padding: 2px;
+  margin-left: 550px;
+}
+
+#deleteButton {
+  background-color: #f44336;
+}
+
+#deleteButton:hover {
+  background-color: #d32f2f;
+}
+
+p {
+  display: none;
+  text-align: center;
+  color: #f44336;
 }
 
 .strike-row {
-    text-decoration: line-through;
+  text-decoration: line-through;
 }
-  
-h2{
-    text-align: center;
+
+h2 {
+  text-align: center;
 }
